log
Fri Mar 18 14:38:28 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bb4dc87
Fri Mar 18 14:40:32 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d23a75
Fri Mar 18 14:41:51 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
318b6d4
Fri Mar 18 14:45:06 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:45:34: error: ‘list->current’ is a pointer; did you mean to use ‘->’?
     list->current = list->current.next;
                                  ^
                                  ->
Compilation failed
493c1e9
Fri Mar 18 14:45:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4b126d
Fri Mar 18 14:46:40 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
336e7fc
Fri Mar 18 14:47:09 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
15aabfe
Fri Mar 18 14:47:27 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
765bcea
Fri Mar 18 14:49:10 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4982df9
Fri Mar 18 14:50:08 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
fc1a3f5
Fri Mar 18 14:50:50 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:39:8: note: declared here
 void * firstList(List * list) {
        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac6a97e
Fri Mar 18 14:50:59 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
915e617
Fri Mar 18 14:51:34 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
d89d9e1
Fri Mar 18 14:53:23 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7e1557d
Fri Mar 18 14:53:45 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1e381db
Fri Mar 18 14:54:11 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
bb88260
Fri Mar 18 14:54:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:23: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
     if (list->current != NULL & list->current->next != NULL)
                       ^
cc1: all warnings being treated as errors
Compilation failed
5dedc71
Fri Mar 18 14:55:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d0527ed
Fri Mar 18 14:55:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a396dda
Fri Mar 18 14:56:24 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6886373
Fri Mar 18 14:57:21 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6528d13
Fri Mar 18 14:58:18 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|5
total_score: 15/70
d2fe7c6
Fri Mar 18 15:00:27 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
32fd23b
Fri Mar 18 15:02:02 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|5
total_score: 15/70
84fce60
Fri Mar 18 15:03:09 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
3f0145a
Fri Mar 18 15:03:46 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|5
total_score: 15/70
4efda7c
Fri Mar 18 15:05:34 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
d13d64c
Fri Mar 18 15:05:59 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
3e1ceb6
Fri Mar 18 15:06:32 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|5
total_score: 15/70
a74d5ee
Fri Mar 18 15:07:51 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
3c442d6
Fri Mar 18 15:08:26 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|5
total_score: 15/70
8e248b1
Fri Mar 18 15:08:38 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
     if (list->current->next != NULL)
     ^~
list.c:49:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
       return list->current->data;
       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4af49d5
Fri Mar 18 15:08:52 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|5
total_score: 15/70
cfe574c
Fri Mar 18 15:10:31 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d1616c2
Fri Mar 18 15:11:52 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 25/70
35d9a43
Fri Mar 18 15:13:07 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
9c0bbbd
Fri Mar 18 15:14:32 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
fa713a5
vi., 18 de mar. de 2022 21:01:41: 
 tests:  9|3
total_score: 35/70
6e2b233
vi., 18 de mar. de 2022 21:28:12: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  9|3
total_score: 35/70
80f12a7
vi., 18 de mar. de 2022 21:30:13: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
63fa9a0
vi., 18 de mar. de 2022 21:31:53: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
9c78269
vi., 18 de mar. de 2022 21:37:42: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
fd6fad2
